fix: fix window resizing issue with overlapping elements

--- a/index_style.css
+++ b/index_style.css
@@ -1,4 +1,4 @@
-/* Navigation bar */
+/* ------------------- Navigation bar ------------------- */
 .navbar {
   position: fixed;
   overflow: hidden;
@@ -21,7 +21,7 @@
   margin-left: auto;
 }
 
-/* Navbar fonts */
+/* Navbar text */
 .navbar a {
   margin-top: 6px;
   margin-bottom: 2px;
@@ -54,7 +54,7 @@
   font-weight: 700;
 }
 
-/* Main page */
+/* ------------------- Main page ------------------- */
 .main {
   display: flex;
   justify-content: center;
@@ -64,12 +64,12 @@
   width: 100%;
 }
 
-.main_content {
+.main_text {
   position: absolute;
   max-width: 330px;
 }
 
-.main_content h1 {
+.main_text h1 {
   color: #440D0F;
   font-family: 'Inknut Antiqua';
   font-size: 8vh;
@@ -77,7 +77,7 @@
   line-height: 0.3;
 }
 
-.main_content h2 {
+.main_text h2 {
   color: #440D0F;
   font-family: 'Inknut Antiqua';
   font-size: 2.2vh;
@@ -85,7 +85,7 @@
   letter-spacing: -2px;
 }
 
-.main_content p {
+.main_text p {
   color: #191716;
   font-family: 'Cardo';
   font-size: 2.5vh;
